# annitia.kali

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PAPER.md  README.md  RESULTS.md  notebook_annitia.ipynb
annitia/: __init__.py  _lib.py  _structs.py  catboost_model.py  dataset.py  ensemble.py  lgbm.py  metrics.py  model.py  optimizer.py  ssm_kfold.py  train.py  xgb.py
data/: oof_ssm_dth.npy  oof_ssm_dth_200ep_3s.npy  oof_ssm_dth_200ep_s123.npy  oof_ssm_dth_200ep_s42.npy  oof_ssm_dth_200ep_s777.npy  oof_ssm_hep.npy  oof_ssm_hep_200ep_3s.npy  oof_ssm_hep_200ep_s123.npy  oof_ssm_hep_200ep_s42.npy  oof_ssm_hep_200ep_s777.npy  submission_1.csv  submission_2.csv  submission_200ep_3s_ssm100.csv  submission_200ep_3s_ssm100_fixed.csv  submission_200ep_3s_ssm50.csv  submission_ssm10_xgb90_v2.csv  submission_ssm15_xgb85_v2.csv  submission_ssm20_xgb80_v2.csv  submission_ssm25_xgb75_v2.csv  submission_ssm30_xgb70_v2.csv  test_ssm_dth.npy  test_ssm_dth_200ep_3s.npy  test_ssm_dth_200ep_s123.npy  test_ssm_dth_200ep_s42.npy  test_ssm_dth_200ep_s777.npy  test_ssm_hep.npy  test_ssm_hep_200ep_3s.npy  test_ssm_hep_200ep_s123.npy  test_ssm_hep_200ep_s42.npy  test_ssm_hep_200ep_s777.npy
include/: annitia.h
src/: annitia.c  csv_parser.c  ensemble_main.c  mask_utils.c  masld_data.c  predict_main.c  survival_loss.c  train_main.c
tests/: test_data_loader.c  test_survival_loss.c
